[tool.poetry]
name = "cas-tools"
version = "0.0.1.dev48"
description = "Cell Annotation Schema tools."
authors = [""]
license = "Apache-2.0 license"
readme = "README.md"
homepage = "https://github.com/cellannotation/cas-tools"
repository = "https://github.com/cellannotation/cas-tools"

[tool.poetry.dependencies]
python = "^3.9"
anndata = "0.10.3"
cellxgene-census = { version = "1.10.2", python = ">=3.9,<3.12" }
openpyxl = "3.1.2"
dataclasses-json = "0.6.4"
pandas = "2.2.1"
jsonschema = "4.4.0"
ordered-set = "4.1.0"
deepmerge = "1.1.0"
cell-annotation-schema = "0.2b0"
h5py = "3.10.0"
numpy = "1.26.4"
marshmallow = "3.21.1"
python-dateutil = "2.9.0"
schema-automator = "0.5.1"
linkml = "1.7.8"
oaklib = "0.6.4"
defusedxml = "0.7.1"
rdflib = "7.0.0"
requests = "2.32.3"
ruamel-yaml = "0.18.6"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
flake8-black = "^0.3.6"
flake8-isort = "^6.0.0"

[tool.poetry.scripts]
cas = "cas.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
