[tool.poetry]
name = "cas-tools"
version = "1.1.5"
description = "Cell Annotation Schema tools."
authors = ["Huseyin Kir <hk9@sanger.ac.uk>", "Ugur Bayindir <ub2@sanger.ac.uk>"]
license = "Apache-2.0 license"
packages = [
    { include = "cas", from = "src" }
]
readme = "README.md"
homepage = "https://github.com/cellannotation/cas-tools"
repository = "https://github.com/cellannotation/cas-tools"

[tool.poetry.dependencies]
python = "^3.10"
anndata = "0.10.5"
cellxgene-census = { version = "1.16.0", python = ">=3.10,<3.13" }
urllib3 = "<2"
openpyxl = "3.1.2"
dataclasses-json = "0.6.4"
pandas = "2.2.1"
jsonschema = "4.4.0"
ordered-set = "4.1.0"
deepmerge = "1.1.0"
cell-annotation-schema = "1.1.0"
h5py = "3.10.0"
numpy = "1.26.4"
marshmallow = "3.21.1"
python-dateutil = "2.9.0"
schema-automator = "0.5.1"
linkml = "1.7.8"
oaklib = "0.6.4"
defusedxml = "0.7.1"
rdflib = "7.0.0"
requests = "2.32.3"
ruamel-yaml = "0.18.6"
cap-anndata = "^0.3.0"
cas-linkml = "0.0.15"
psycopg2-binary = "2.9.5"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
flake8-black = "^0.3.6"
flake8-isort = "^6.0.0"
scipy = "^1.13.1"
sphinx = "7.3.5"
sphinx-rtd-theme = { version = "^1.3.0"}
sphinx-copybutton = { version = "^0.5.2"}
sphinx-autodoc-typehints = "^2.2.3"
myst-parser = "3.0.1"

[tool.poetry.extras]
docs = ["sphinx", "sphinx-rtd-theme", "sphinx-copybutton"]

[tool.poetry.scripts]
cas = "cas.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
